# rs-thread-pool

./: .qubit-style-allowlist  Cargo.toml  README.md  README.zh_CN.md
.rs-ci/: coverage.sh
benches/: thread_pool_bench.rs
doc/: thread_pool_benchmark_baseline_2026-04-22.md  thread_pool_work_stealing_prototype_2026-04-22.md
src/: delayed_task_handle.rs  delayed_task_scheduler.rs  fixed_thread_pool.rs  fixed_thread_pool_builder.rs  lib.rs  pool_job.rs  queue_steal_source.rs  thread_pool_build_error.rs  thread_pool_hooks.rs  thread_pool_stats.rs  worker_queue.rs  worker_runtime.rs
src/delayed/: delayed_task_handle.rs  delayed_task_scheduler.rs  delayed_task_scheduler_inner.rs  delayed_task_scheduler_lifecycle.rs  delayed_task_scheduler_state.rs  delayed_task_scheduler_worker.rs  delayed_task_state.rs  mod.rs  scheduled_task.rs
src/dynamic/: mod.rs  thread_pool.rs  thread_pool_builder.rs  thread_pool_config.rs  thread_pool_inner.rs  thread_pool_state.rs  thread_pool_worker.rs  thread_pool_worker_queue.rs  thread_pool_worker_runtime.rs
src/fixed/: fixed_submit_guard.rs  fixed_thread_pool.rs  fixed_thread_pool_builder.rs  fixed_thread_pool_inner.rs  fixed_thread_pool_lifecycle.rs  fixed_thread_pool_state.rs  fixed_worker.rs  fixed_worker_queue.rs  fixed_worker_runtime.rs  mod.rs  queue_steal_source.rs
src/thread_pool/: cas.rs  inflight_submit_counter.rs  lifecycle_state_machine.rs  mod.rs  pool_job.rs  submission_admission.rs  submit_enter_outcome.rs  thread_pool.rs  thread_pool_build_error.rs  thread_pool_builder.rs  thread_pool_config.rs  thread_pool_inner.rs  thread_pool_lifecycle.rs  thread_pool_state.rs  thread_pool_stats.rs
tests/: executor_build_error_tests.rs  lib_tests.rs  mod.rs  pool_job_tests.rs  queue_steal_source_tests.rs  thread_pool_build_error_tests.rs  thread_pool_hooks_tests.rs  thread_pool_stats_tests.rs  worker_queue_tests.rs  worker_runtime_tests.rs
tests/coverage_support/: coverage_support_tests.rs  mod.rs
tests/delayed/: delayed_task_handle_tests.rs  delayed_task_scheduler_inner_tests.rs  delayed_task_scheduler_lifecycle_tests.rs  delayed_task_scheduler_state_tests.rs  delayed_task_scheduler_tests.rs  delayed_task_scheduler_worker_tests.rs  delayed_task_state_tests.rs  mod.rs  mod_tests.rs  scheduled_task_tests.rs
tests/dynamic/: mod.rs  mod_tests.rs  (+9 more)
(+33 files in other folders)
