[package]
name = "qubit-thread-pool"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-thread-pool"
description = "Dynamic and fixed thread pool executor services for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-thread-pool"
documentation = "https://docs.rs/qubit-thread-pool"
readme = "README.md"
keywords = ["thread-pool", "executor", "concurrency", "work-stealing"]
categories = ["concurrency"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
]

[lib]
name = "qubit_thread_pool"
doctest = true

[dependencies]
crossbeam-deque = "0.8"
thiserror = "2.0"

qubit-executor = { path = "../rs-executor" }
qubit-function = "0.13"
qubit-lock = "0.4"

[dev-dependencies]
criterion = "0.8"
rayon = "1.12"
threadpool = "1.8"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "thread_pool_bench"
harness = false
